--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon server.js",
-    "start:prod": "webpack && node server.js"
-
+    "start:dev": "webpack --watch --mode development",
+    "start:prod": "webpack --mode production && node ./dist/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +21,7 @@
   "devDependencies": {
     "jest": "^27.3.1",
     "nodemon": "^2.0.15",
+    "nodemon-webpack-plugin": "^4.6.0",
     "supertest": "^6.1.6",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1"
