--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "webpack --watch --mode development",
-    "start:prod": "webpack --mode production && node ./dist/bundle.js"
+    "start:prod": "webpack --mode production && node ./dist/bundle.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
